# chip8-android

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ych/chip8/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jin_load.cpp  jni_load.h
app/src/main/cpp/chip/: chip8.cpp  chip8.h  vmchip.cpp  vmchip.h
app/src/main/java/com/ych/chip8/: BitBGM.kt  CApplication.kt  Chip8.kt  Chip8View.kt  ChipJNI.java  MainActivity.kt
app/src/main/res/drawable/: bg_key.xml  bg_key_pressed.xml  selector_bg_key.xml
app/src/main/res/layout/: item_key.xml  main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/ych/chip8/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
